--- a/2013.9.md
+++ b/2013.9.md
@@ -9,3 +9,9 @@
 今天后来也有点察觉. 我一直都不需要去说服别人. 我需要去说服自己. 自己明明很早就知道为什么自己想怎么, 不想怎么. 不过就是没有办法去说服自己, 一直不愿意去接受这些事实. 
 
 大概是一个人久了, 有些寂寞, 有些话自己都不知道怎么说出来的. 如果你看到了, 我觉得您微笑一个就行了. 
+
+# 9.6 憋了点东西特么全在洗完澡忘了
+
+可能最近东西较杂压力太大, 处处不顺(我擦我怎么觉得我一直都是处处不顺, 要不要改改). 想的有点多, 所以心情就一直都不怎么好. 无人倾诉, 或者想找倾诉的人不敢找(越来越怂), 那还是洗洗睡吧. 
+
+大怒就睡觉! 
